<resources>
    <string name="app_name">Book search</string>

    <!--    For views   -->
    <string name="title_book_list">Books</string>
    <string name="title_book_detail">Book Detail</string>
    <string name="authors">Authors:</string>
    <string name="print_type">Print type:</string>
    <string name="published_date">Published date:</string>
    <string name="publisher">Publisher:</string>
    <string name="categories">Categories:</string>
    <string name="pages">Pages</string>
    <string name="query_hint">Enter book or author</string>
    <string name="book_cover_content_description">Book Cover</string>
    <string name="empty_book_collection">Your book collection is empty</string>
    <string name="favorites_button">fav_button</string>

    <!--    System message  -->
    <string name="no_such_book">"Something went wrong, try again later"</string>
    <string name="add_to_fav">Book successfully added to your collection</string>
    <string name="delete_fav">Book successfully removed from your collection</string>
    <string name="add_error_message">This book already exists in your collection</string>
    <string name="delete_error_message">You have already removed this book from the collection</string>
    <string name="menu_refresh">Refresh</string>
    <string name="delete_all_books">Delete all books</string>
    <string name="search">Search</string>
    <string name="go_to_reading">Go to reading</string>
    <string name="add_to_collection">Add to Collection</string>
    <string name="share">Share</string>
    <string name="remove_from_collection">Remove from Collection</string>
    <string name="send_feedback">Send feedback</string>
    <string name="feedback">Hello, dear user. \n\n
            Thank you for your attention to the Book Search Application.
            It works based on the Google Book API. \n\n
            If you have thoughts on how to make this application better,
        then send feedback via the button below.</string>

    <!--    Nav drawer  -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Book Application</string>
    <string name="nav_header_subtitle">github.com/anovosvit</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="general">General</string>
    <string name="search_book">Search Book</string>
    <string name="book_collection">Book Collection</string>
    <string name="feedback_menu">Feedback</string>
    <string name="communicate">Communicate</string>

</resources>