<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:showIn="navigation_view">

    <item android:title="">
        <menu>
        </menu>
    </item>
    <item android:title="@string/general">
        <menu>
            <group android:checkableBehavior="single">
                <item
                        android:id="@+id/bookSearchFragment"
                        android:icon="@drawable/ic_search"
                        android:title="@string/search_book" />

                <item
                        android:id="@+id/bookCollectionFragment"
                        android:icon="@drawable/ic_book"
                        android:title="@string/book_collection" />
            </group>
        </menu>
    </item>

    <item android:title="@string/communicate">
        <menu>
            <group android:checkableBehavior="single">
                <item
                        android:id="@+id/feedbackFragment"
                        android:icon="@drawable/ic_send"
                        android:title="@string/feedback_menu" />
            </group>
        </menu>
    </item>

</menu>