<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
                name="bookInfo"
                type="com.github.anovosvit.searchbook.data.model.VolumeInfo" />

    </data>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/frameLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="50dp"
                tools:context=".bookinfo.BookInfoFragment">

            <FrameLayout
                    android:id="@+id/frameLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="340dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="300dp"
                        android:background="@drawable/gradientbackground"
                        android:backgroundTint="@color/lightMediumGray"
                        android:orientation="vertical">

                    <ImageView
                            android:id="@+id/coverBookImageView"
                            android:layout_width="100dp"
                            android:layout_height="150dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="25dp"
                            android:src="@drawable/cover" />

                    <TextView
                            android:id="@+id/bookTitleTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="10dp"
                            android:paddingStart="8dp"
                            android:paddingEnd="8dp"
                            android:text="@{bookInfo.title, default = not_found}"
                            android:textAlignment="center"
                            android:textSize="21sp"
                            android:textStyle="bold" />

                </LinearLayout>

                <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:layout_marginStart="50dp"
                        android:layout_marginTop="260dp"
                        android:layout_marginEnd="50dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:padding="10dp"
                            android:paddingStart="30dp"
                            android:paddingEnd="30dp">

                        <TextView
                                android:id="@+id/pagesTextView"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="20dp"
                                android:text="@string/pages"
                                android:textStyle="bold"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                                android:id="@+id/numberOfPagesTextView"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@{String.valueOf(bookInfo.pageCount), default = 0000}"
                                android:textColor="@color/colorAccent"
                                android:textSize="18sp"
                                android:textStyle="bold"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="@+id/pagesTextView"
                                app:layout_constraintStart_toStartOf="@+id/pagesTextView"
                                app:layout_constraintTop_toBottomOf="@+id/pagesTextView" />

                        <TextView
                                android:id="@+id/scoreTextView"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="30dp"
                                android:text="@{String.valueOf(bookInfo.averageRating), default = 0.0}"
                                android:textStyle="bold"
                                app:layout_constraintBottom_toBottomOf="@+id/pagesTextView"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintTop_toTopOf="@+id/pagesTextView" />


                        <RatingBar
                                android:id="@+id/ratingBarInfo"
                                style="?android:attr/ratingBarStyleSmall"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:rating="@{bookInfo.averageRating, default = 1.5}"
                                app:layout_constraintBottom_toBottomOf="@+id/numberOfPagesTextView"
                                app:layout_constraintEnd_toEndOf="@+id/scoreTextView"
                                app:layout_constraintStart_toStartOf="@+id/scoreTextView"
                                app:layout_constraintTop_toBottomOf="@+id/pagesTextView" />


                    </androidx.constraintlayout.widget.ConstraintLayout>


                </androidx.cardview.widget.CardView>
            </FrameLayout>

            <TextView
                    android:id="@+id/descriptionTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="24dp"
                    android:text="@{bookInfo.description, default = description}"
                    android:textAlignment="inherit"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/frameLayout2" />

            <TextView
                    android:id="@+id/categories"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/categories"
                    android:textColor="@color/textColorAccent"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/descriptionTextView"
                    app:layout_constraintTop_toBottomOf="@+id/descriptionTextView"
                    app:layout_constraintVertical_chainStyle="spread" />

            <TextView
                    android:id="@+id/publisher"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/publisher"
                    android:textColor="@color/textColorAccent"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/categories"
                    app:layout_constraintTop_toBottomOf="@+id/categoriesTextView" />

            <TextView
                    android:id="@+id/date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/published_date"
                    android:textColor="@color/textColorAccent"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/publisher"
                    app:layout_constraintTop_toBottomOf="@+id/publisherTextView" />

            <TextView
                    android:id="@+id/printType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/print_type"
                    android:textColor="@color/textColorAccent"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/date"
                    app:layout_constraintTop_toBottomOf="@+id/dateTextView" />

            <TextView
                    android:id="@+id/categoriesTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@{bookInfo.category, default = not_found}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/categories"
                    app:layout_constraintTop_toTopOf="@+id/categories" />

            <TextView
                    android:id="@+id/publisherTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@{bookInfo.publisher, default = not_found}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/publisher"
                    app:layout_constraintTop_toBottomOf="@+id/categoriesTextView" />

            <TextView
                    android:id="@+id/dateTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@{bookInfo.publishedDate, default = not_found}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/date"
                    app:layout_constraintTop_toBottomOf="@+id/publisherTextView" />

            <TextView
                    android:id="@+id/typeTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@{bookInfo.printType, default = not_found}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/printType"
                    app:layout_constraintTop_toBottomOf="@+id/dateTextView" />

            <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/authors"
                    android:textColor="@color/textColorAccent"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/printType"
                    app:layout_constraintTop_toBottomOf="@+id/typeTextView" />

            <TextView
                    android:id="@+id/authorTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@{bookInfo.author, default = not_found}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView2"
                    app:layout_constraintTop_toBottomOf="@+id/typeTextView" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>